# serializer version: 1
# name: test_chat_prompt_w_msgs_placeholder_ser_des[chat_prompt]
  dict({
    'id': list([
      'langchain',
      'prompts',
      'chat',
      'ChatPromptTemplate',
    ]),
    'kwargs': dict({
      'input_variables': list([
        'bar',
      ]),
      'messages': list([
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'SystemMessagePromptTemplate',
          ]),
          'kwargs': dict({
            'prompt': dict({
              'id': list([
                'langchain',
                'prompts',
                'prompt',
                'PromptTemplate',
              ]),
              'kwargs': dict({
                'input_variables': list([
                ]),
                'template': 'foo',
                'template_format': 'f-string',
              }),
              'lc': 1,
              'name': 'PromptTemplate',
              'type': 'constructor',
            }),
          }),
          'lc': 1,
          'type': 'constructor',
        }),
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'MessagesPlaceholder',
          ]),
          'kwargs': dict({
            'variable_name': 'bar',
          }),
          'lc': 1,
          'type': 'constructor',
        }),
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'HumanMessagePromptTemplate',
          ]),
          'kwargs': dict({
            'prompt': dict({
              'id': list([
                'langchain',
                'prompts',
                'prompt',
                'PromptTemplate',
              ]),
              'kwargs': dict({
                'input_variables': list([
                ]),
                'template': 'baz',
                'template_format': 'f-string',
              }),
              'lc': 1,
              'name': 'PromptTemplate',
              'type': 'constructor',
            }),
          }),
          'lc': 1,
          'type': 'constructor',
        }),
      ]),
    }),
    'lc': 1,
    'name': 'ChatPromptTemplate',
    'type': 'constructor',
  })
# ---
# name: test_chat_prompt_w_msgs_placeholder_ser_des[placeholder]
  dict({
    'id': list([
      'langchain',
      'prompts',
      'chat',
      'MessagesPlaceholder',
    ]),
    'kwargs': dict({
      'variable_name': 'bar',
    }),
    'lc': 1,
    'type': 'constructor',
  })
# ---
# name: test_chat_tmpl_serdes
  dict({
    'id': list([
      'langchain',
      'prompts',
      'chat',
      'ChatPromptTemplate',
    ]),
    'kwargs': dict({
      'input_variables': list([
        'foo',
        'more_history',
        'my_image',
        'my_other_image',
        'name',
      ]),
      'messages': list([
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'SystemMessagePromptTemplate',
          ]),
          'kwargs': dict({
            'prompt': dict({
              'id': list([
                'langchain',
                'prompts',
                'prompt',
                'PromptTemplate',
              ]),
              'kwargs': dict({
                'input_variables': list([
                  'name',
                ]),
                'template': 'You are an AI assistant named {name}.',
                'template_format': 'f-string',
              }),
              'lc': 1,
              'name': 'PromptTemplate',
              'type': 'constructor',
            }),
          }),
          'lc': 1,
          'type': 'constructor',
        }),
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'SystemMessagePromptTemplate',
          ]),
          'kwargs': dict({
            'prompt': list([
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'prompt',
                  'PromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                    'name',
                  ]),
                  'template': 'You are an AI assistant named {name}.',
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'PromptTemplate',
                'type': 'constructor',
              }),
            ]),
          }),
          'lc': 1,
          'type': 'constructor',
        }),
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'SystemMessagePromptTemplate',
          ]),
          'kwargs': dict({
            'prompt': dict({
              'id': list([
                'langchain',
                'prompts',
                'prompt',
                'PromptTemplate',
              ]),
              'kwargs': dict({
                'input_variables': list([
                  'foo',
                ]),
                'template': 'you are {foo}',
                'template_format': 'f-string',
              }),
              'lc': 1,
              'name': 'PromptTemplate',
              'type': 'constructor',
            }),
          }),
          'lc': 1,
          'type': 'constructor',
        }),
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'HumanMessagePromptTemplate',
          ]),
          'kwargs': dict({
            'prompt': list([
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'prompt',
                  'PromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                  ]),
                  'template': 'hello',
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'PromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'prompt',
                  'PromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                  ]),
                  'template': "What's in this image?",
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'PromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'prompt',
                  'PromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                  ]),
                  'template': "What's in this image?",
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'PromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain_core',
                  'prompts',
                  'dict',
                  'DictPromptTemplate',
                ]),
                'kwargs': dict({
                  'template': dict({
                    'cache_control': dict({
                      'type': '{foo}',
                    }),
                    'text': "What's in this image?",
                    'type': 'text',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'DictPromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'image',
                  'ImagePromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                    'my_image',
                  ]),
                  'template': dict({
                    'url': 'data:image/jpeg;base64,{my_image}',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'ImagePromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'image',
                  'ImagePromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                    'my_image',
                  ]),
                  'template': dict({
                    'url': 'data:image/jpeg;base64,{my_image}',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'ImagePromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'image',
                  'ImagePromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                    'my_other_image',
                  ]),
                  'template': dict({
                    'url': '{my_other_image}',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'ImagePromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'image',
                  'ImagePromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                    'my_other_image',
                  ]),
                  'template': dict({
                    'detail': 'medium',
                    'url': '{my_other_image}',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'ImagePromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'image',
                  'ImagePromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                  ]),
                  'template': dict({
                    'url': 'https://www.langchain.com/image.png',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'ImagePromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'image',
                  'ImagePromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                  ]),
                  'template': dict({
                    'url': 'data:image/jpeg;base64,foobar',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'ImagePromptTemplate',
                'type': 'constructor',
              }),
              dict({
                'id': list([
                  'langchain',
                  'prompts',
                  'image',
                  'ImagePromptTemplate',
                ]),
                'kwargs': dict({
                  'input_variables': list([
                  ]),
                  'template': dict({
                    'url': 'data:image/jpeg;base64,foobar',
                  }),
                  'template_format': 'f-string',
                }),
                'lc': 1,
                'name': 'ImagePromptTemplate',
                'type': 'constructor',
              }),
            ]),
          }),
          'lc': 1,
          'type': 'constructor',
        }),
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'MessagesPlaceholder',
          ]),
          'kwargs': dict({
            'optional': True,
            'variable_name': 'chat_history',
          }),
          'lc': 1,
          'type': 'constructor',
        }),
        dict({
          'id': list([
            'langchain',
            'prompts',
            'chat',
            'MessagesPlaceholder',
          ]),
          'kwargs': dict({
            'variable_name': 'more_history',
          }),
          'lc': 1,
          'type': 'constructor',
        }),
      ]),
      'optional_variables': list([
        'chat_history',
      ]),
      'partial_variables': dict({
        'chat_history': list([
        ]),
      }),
    }),
    'lc': 1,
    'name': 'ChatPromptTemplate',
    'type': 'constructor',
  })
# ---
